<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="peida.app.tacuaradio.MainActivity" >

    <LinearLayout
        android:id="@+id/back1"
        android:layout_width="fill_parent"
        android:layout_height="127dp"
        android:background="#80303050"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/back2"
        android:layout_width="fill_parent"
        android:layout_height="254dp"
        android:background="#30907070"
        android:orientation="horizontal" >
    </LinearLayout>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/icon_description"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_image"
        android:layout_below="@+id/back2"
        android:orientation="horizontal" >

        <Switch
            android:id="@+id/power_button"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/power_button"
            android:textColor="#fff"
            android:onClick="startStreaming"
            android:typeface="monospace" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="90"
        android:layout_below="@+id/buttons" />

    <LinearLayout
        android:id="@+id/media_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/volume"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton1"
            android:onClick="stopStreaming"
            android:src="@drawable/control_stop_grey" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton2"
            android:onClick="unpauseStreaming"
            android:src="@drawable/control_play_grey" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton3"
            android:onClick="pauseStreaming"
            android:src="@drawable/control_pause_grey" />
        
        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton4"
            android:onClick="recordStreaming"
            android:src="@drawable/ic_tab_artists_grey" />
        
        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton5"
            android:onClick="openSettings"
            android:src="@drawable/ic_tab_options_grey" />
        
    </LinearLayout>

</RelativeLayout>